<resources>
    <string name="app_name">Frorage</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>

    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="prompt_password">Password</string>

    <string name="invalid_username">Not a valid username</string>


    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="agreements_accept">Accept all agreements</string>
    <string name="lets_frorage">Let\'s FRORAGE</string>
    <string name="create">Create kitchen</string>
    <string name="kitchen_name">Kitchen name</string>
    <string name="create_or_join">Create / Join Kitchen</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password_empty">Enter Password</string>
    <string name="error_message_password">Password must be >8 characters</string>
    <string name="error_message_email_empty">Enter Email</string>
    <string name="error_message_name_empty">Enter name</string>
    <string name="error_message_access_token_empty">Enter confirmation code</string>
    <string name="error_message_name">Name must be >3 characters</string>
    <string name="error_message_agreements">This field is required</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_password_match">Password does not matches</string>
    <string name="confirm_account">Confirm account</string>
    <string name="confirm_code">Confirmation code</string>
    <string name="resend_email">You didn\'t get any email? Resend!</string>

</resources>
