<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/im_background"
    android:backgroundTint="#8C383434"
    android:backgroundTintMode="screen"
    tools:context=".activities.ConfirmAccountA">

    <!-- Return button -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/agency_fb_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Registration fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/bg_inputs"
        android:orientation="vertical"
        android:paddingLeft="33dp"
        android:paddingTop="20dp"
        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!--Box title -->
        <TextView

            android:layout_marginHorizontal="65dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:textAlignment="center"
            android:text="@string/create_or_join"
            android:textColor="@color/white"
            android:textSize="25sp"

            />

        <!-- Name field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kitchen_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kitchen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kitchen_name"
                android:theme="@style/EditTextTheme"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kitchen_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Chcek box -->
        <CheckBox
            android:id="@+id/create_kitchen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:theme="@style/MyCheckbox" />


    </LinearLayout>


    <!-- Bottom menu -->
    <LinearLayout
        android:id="@+id/linearLayout"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:weightSum="2.0"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_let_frorage"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/darkBrown"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/lets_frorage"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:enabled="false"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>